//
// Generated by chaintool.  DO NOT EDIT!!
//

syntax = "proto3";

package trial_chain.chaincode.registry;

message TrialEntry {
        string data = 1;
}

message List {
        repeated TrialEntry trialEntries = 1;
}

message EmptyParams {
}


//
// Available RPC functions exported by this interface
//
// void AddEntry(TrialEntry) -> trial-chain.chaincode.registry/txn/1 
// void RemoveEntry(TrialEntry) -> trial-chain.chaincode.registry/txn/2 
// TrialEntry GetTrialDescription(EmptyParams) -> trial-chain.chaincode.registry/query/1 
// List GetTrialList(EmptyParams) -> trial-chain.chaincode.registry/query/2 
